--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amocrm-api",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "AmoCRM api client",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
   "dependencies": {
     "apiapi": "^1.6.1",
     "axios": "^0.7.0",
-    "bluebird": "^3.0.5"
+    "bluebird": "^3.0.5",
+    "lodash": "^4.17.21"
   }
 }
